--- a/app/src/main/res/drawable/sh_rounded_rectangle_medium_outline_08dp.xml
+++ b/app/src/main/res/drawable/sh_rounded_rectangle_medium_outline_08dp.xml
@@ -4,8 +4,10 @@
 
     <corners android:radius="8dp" />
 
+    <solid android:color="@color/clear" />
+
     <stroke
-        android:width="1dp"
+        android:width="2dp"
         android:color="@color/vio07" />
 
 </shape>
