Make layout for transfer money dialog

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="blu06">#FF495FEE</color>
     <color name="gry01">#FF858585</color>
     <color name="gry02">#FFB1B1B1</color>
+    <color name="gry03">#FFE7E7E7</color>
     <color name="pnk01">#FFEBA7FF</color>
     <color name="vio01">#FF6A1474</color>
     <color name="vio02">#FFCFCAFF</color>
