--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="blk01">#FF000000</color>
+    <color name="blk02">#28000000</color>
     <color name="blu01">#FFADD1FF</color>
     <color name="blu02">#FF3643EE</color>
     <color name="blu03">#FF4B8EFF</color>
