--- a/app/src/main/res/layout/fra_profile.xml
+++ b/app/src/main/res/layout/fra_profile.xml
@@ -67,8 +67,11 @@
 
     <TextView
         android:id="@+id/nameLBL"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:lines="1"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/refreshDetailsBTN"
+        android:ellipsize="end"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/google_sans_medium"
         android:textColor="@color/blu03"
